--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-ui": "^2.13.2",
     "ramda": "^0.27.1",
     "vue": "^2.6.11",
+    "vue-amap": "^0.5.10",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
